--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 
   "manifest_version": 2,
-  "name": "Historify",
+  "name": "__MSG_extensionName__",
   "permissions": ["storage", "tabs", "<all_urls>"],
   "version": "1.3.1",
 
-  "description": "Finally a better history with images. Note: Still in development.",
+  "description": "__MSG_extensionDescription__",
   "homepage_url": "https://github.com/flosommerfeld/Historify",
   "author": "flosommerfeld",
 
@@ -13,13 +13,11 @@
     "96": "icons/icon_96.png"
   },
 
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content_script.js"],
-      "run_at": "document_idle"
-    }
-  ],
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content_script.js"],
+    "run_at": "document_idle"
+  }],
 
   "background": {
     "scripts": ["background_script.js"]
@@ -31,10 +29,12 @@
   },
 
   "applications": {
-  "gecko": {
-    "id": "historify_flosommerfeld@example.com",
-    "strict_min_version": "42.0"
-  }
-}
+    "gecko": {
+      "id": "historify_flosommerfeld@example.com",
+      "strict_min_version": "42.0"
+    }
+  },
+
+  "default_locale": "en"
 
 }
